# GHA_HIL

./: .gitignore  README.md  ReadMe.md  mkdocs.yml
.github/workflows/: deploy_docs_page.yaml  hil_test_run.yaml  test.yaml
docs/: example_project_decription.md  hil_fundamentals.md  hil_server_installation_manual.md  index.md  runners.md  working_with_hiltest_framework.md
docs/en/: hil_server_installation_manual.md
docs/pl/: README.md  hil_fundamentals.md  hil_server_installation_manual.md
hw/NUCLEO_G071RB/: .mxproject  CMakeLists.txt  NUCLEO_G071RB.ioc  STM32G071XX_FLASH.ld
hw/NUCLEO_G071RB/Core/Inc/: main.h  modbus_slave_driver_config.h
hw/NUCLEO_G071RB/Core/Src/: main.c  stm32g0xx_it.c
hw/NUCLEO_G071RB/Core/driver_interfaces/: led_driver_interface.c  modbus_slave_driver_interface.c  pushbutton_GPIO_interface.c
hw/NUCLEO_G071RB/cmake/: starm-clang.cmake
hw/NUCLEO_G071RB/cmake/stm32cubemx/: CMakeLists.txt
hw/STM32G070RB/: CMakeLists.txt
hw/STM32G071RB/: CMakeLists.txt
hw/config/STM32/: compiler_flags.cmake
lib/MODBUS/: CMakeLists.txt  modbus_config.h  modbus_public_type.h  modbus_slave.c  modbus_slave.h
lib/MODBUS/common/: modbus_type.h
lib/PUSHBUTTON/: CMakeLists.txt  pushbutton.c  pushbutton.h  pushbutton_GPIO_interface.h
src/: main_app.c  main_app.h
src/keypad/: keypad.c  keypad.h
src/led/: led.c  led.h  led_driver_interface.h
src/modbus_slave/: modbus_slave_manager.c  modbus_slave_manager.h
src/utils/: hal_utils.c
test/: peripherals_config.yaml
test/_config_scripts/run_targets/: run_targets.py
test/hil_tests/: test_LedOutputTestsGroup.py  test_ModbusOutputTestsGroup.py
test/template/: CMakeLists.txt  custom_targets.cmake  generate_mock.cmake
